feat : crud guest photo, setup middleware, change login_tokens
